<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feat.profile.self.SelfProfileFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom_filled_pink_light"
            android:paddingBottom="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/background_bottom_filled_pink_light">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="12dp"
                app:civ_border_color="@color/primary_pink_light"
                app:civ_border_width="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textAlignment="center"
                android:textColor="@color/primary_pink_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/iv_user"
                app:layout_constraintStart_toStartOf="@id/iv_user"
                app:layout_constraintTop_toBottomOf="@id/iv_user" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/second_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="220dp"
            android:background="#FDFAFA"
            android:elevation="4dp"
            android:padding="17dp"
            app:layout_constraintBottom_toTopOf="@id/user_status_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_user_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/primary_pink_light"
                android:drawableTop="@drawable/ic_eye"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_likes"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="500" />

            <TextView
                android:id="@+id/tv_user_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/primary_pink_light"
                android:drawableTop="@drawable/ic_thumbup"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_user_flirts"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_user_views"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="500" />

            <TextView
                android:id="@+id/tv_user_flirts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTint="@color/primary_pink_light"
                android:drawableTop="@drawable/ic_interaction"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_user_likes"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="500" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/user_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/single_status_title"
            android:textAppearance="@style/SansSerif.Normal.14.OuterSpace"
            app:layout_constraintBottom_toTopOf="@id/ed_user_email"
            app:layout_constraintEnd_toStartOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_container"
            tools:text="@string/single_status_title" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/user_status_title"
            app:layout_constraintTop_toTopOf="@id/user_status_title"
            >

            <RadioButton
                android:id="@+id/user_status_single_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_yes" />

            <RadioButton
                android:id="@+id/user_status_single_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_no" />
        </RadioGroup>

        <EditText
            android:id="@+id/ed_user_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_mail"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/ed_user_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_status_title"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:hint="@string/email" />

        <EditText
            android:id="@+id/ed_user_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_child"
            android:layout_marginBottom="20dp"
            android:drawablePadding="20dp"
            android:hint="@string/date_de_naissance"
            app:layout_constraintEnd_toEndOf="@id/ed_user_email"
            app:layout_constraintStart_toStartOf="@id/ed_user_email"
            app:layout_constraintTop_toBottomOf="@id/ed_user_email"
            app:layout_constraintBottom_toTopOf="@id/ed_user_description"
            tools:hint="@string/date_de_naissance" />

        <EditText
            android:id="@+id/ed_user_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawablePadding="20dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="@id/ed_user_email"
            app:layout_constraintStart_toStartOf="@id/ed_user_email"
            app:layout_constraintTop_toBottomOf="@id/ed_user_age"
            tools:hint="@string/description"
            android:textAppearance="@style/SansSerif.Normal.14.OuterSpace"
            android:ems="5"
            android:gravity="start|top"
            android:background="@drawable/background_description_background"
            android:minLines="5"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/submit"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/ed_user_description"
            app:layout_constraintStart_toStartOf="@id/ed_user_email"
            app:layout_constraintEnd_toEndOf="@id/ed_user_email"
            android:text="@string/profile_submit_btn"
            android:layout_marginBottom="10dp"
            android:background="@color/primary_pink_dark"
            android:id="@+id/submit"
            app:layout_constraintBottom_toTopOf="@id/fab"
            />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/submit"
            app:layout_constraintEnd_toEndOf="@id/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_qr_code"
            tools:src="@drawable/ic_qr_code"
            android:layout_marginBottom="86dp"
            android:id="@+id/fab"
            />

    </android.support.constraint.ConstraintLayout>

</ScrollView>